# slack-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ingestion_pipeline.yaml  test.yaml
docs/: Financial Review and Budget Allocation.docx  Marketing Strategy for Q2 Campaign.docx  Operational Efficiency and Resource Allocation.docx  Product Development Update.docx  Q2 Product Launch Strategy Discussion.docx  Strategic Planning for Q3 Launch.docx
infra/terraform/: backend.conf  iam.tf  secrets.tf  terraform.tfvars.example  variables.tf
infra/terraform-bootstrap/: main.tf  terraform.tfvars.example
src/: app.py  main.py  requirements.txt
src/config/: config.py
src/core/: __init__.py  data_ingestion.py  slack_bot_runner.py
src/schemas/: __init__.py  message.py
src/utils/: __init__.py  clients.py  data_extraction.py  llm_response.py  qdrant_db.py
