[project]
name = "slack-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "functions-framework>=3.8.2",
    "google-cloud-storage>=3.1.0",
    "gunicorn>=23.0.0",
    "langfuse>=2.60.2",
    "openai>=1.70.0",
    "pydantic-settings>=2.8.1",
    "python-docx>=1.1.2",
    "qdrant-client>=1.13.3",
    "redis>=5.2.1",
    "slack-bolt>=1.23.0",
    "slack-sdk>=3.35.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]
